# swift-lmdb

./: CMakeLists.txt  Package.swift  README.md
Sources/: CMakeLists.txt
Sources/CLMDB/: CMakeLists.txt
Sources/CLMDB/include/: module.modulemap
cmake/modules/: CMakeLists.txt  LMDBConfig.cmake.in
libraries/liblmdb/: mdb.c
